--- a/Form.ui
+++ b/Form.ui
@@ -163,6 +163,7 @@
    <header>MyPlainTextEdit.h</header>
    <slots>
     <slot>openFile()</slot>
+    <slot>saveFile()</slot>
    </slots>
   </customwidget>
  </customwidgets>
@@ -189,6 +190,22 @@
    <signal>triggered()</signal>
    <receiver>plainTextEdit</receiver>
    <slot>openFile()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>299</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionSave</sender>
+   <signal>triggered()</signal>
+   <receiver>plainTextEdit</receiver>
+   <slot>saveFile()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
