--- a/Form.ui
+++ b/Form.ui
@@ -160,6 +160,9 @@
    <property name="text">
     <string>Close</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+W</string>
+   </property>
   </action>
  </widget>
  <customwidgets>
