--- a/Form.ui
+++ b/Form.ui
@@ -209,10 +209,42 @@
    </hints>
   </connection>
   <connection>
+   <sender>actionOpen</sender>
+   <signal>triggered()</signal>
+   <receiver>MyForm</receiver>
+   <slot>openFile()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>299</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionSave</sender>
+   <signal>triggered()</signal>
+   <receiver>MyForm</receiver>
+   <slot>saveFile()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>299</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
    <sender>actionNew</sender>
    <signal>triggered()</signal>
    <receiver>MyForm</receiver>
-   <slot>newTab()</slot>
+   <slot>newFile()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
@@ -228,7 +260,7 @@
    <sender>actionClose</sender>
    <signal>triggered()</signal>
    <receiver>MyForm</receiver>
-   <slot>closeTab()</slot>
+   <slot>closeFile()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
@@ -244,7 +276,7 @@
    <sender>tabWidget</sender>
    <signal>tabCloseRequested(int)</signal>
    <receiver>MyForm</receiver>
-   <slot>closeTab(int)</slot>
+   <slot>closeFile(int)</slot>
    <hints>
     <hint type="sourcelabel">
      <x>399</x>
@@ -259,7 +291,10 @@
  </connections>
  <slots>
   <slot>newTab()</slot>
-  <slot>closeTab()</slot>
-  <slot>closeTab(int)</slot>
+  <slot>newFile()</slot>
+  <slot>openFile()</slot>
+  <slot>saveFile()</slot>
+  <slot>closeFile()</slot>
+  <slot>closeFile(int)</slot>
  </slots>
 </ui>
