--- a/Form.ui
+++ b/Form.ui
@@ -186,7 +186,7 @@
     <string>Redo</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+Shift+S</string>
+    <string>Ctrl+Shift+Z</string>
    </property>
   </action>
   <action name="actionCopy">
