--- a/stylesheet.qss
+++ b/stylesheet.qss
@@ -3,3 +3,8 @@ QMainWindow {
     background-color: rgb(45, 45, 45);
     selection-background-color: rgb(60, 60, 60);
 }
+
+QTabWidget {
+    color: rgb(209, 209, 209);
+    background-color: rgb(45, 45, 45);
+}
