--- a/stylesheet.qss
+++ b/stylesheet.qss
@@ -1,15 +1,6 @@
-/* VARIABLES */
-
-@font-color: rgb(209, 209, 209);
-@color1: rgb(36, 36, 36);
-@color2: rgb(45, 45, 45);
-@color3: rgb(60, 60, 60);
-
-/* --------- */
-
 QMainWindow {
-    color: @font-color;
-    background-color: @color1;
+    color: rgb(209, 209, 209);
+    background-color: rgb(36, 36, 36);
     padding: 0px;
 }
 
@@ -18,16 +9,16 @@ QTabWidget::pane {
 }
 
 QTabWidget::tab-bar {
-    background-color: @color1;
+    background-color: rgb(36, 36, 36);
 }
 
 QTabWidget{
-	background-color: @color1;
+	background-color: rgb(36, 36, 36);
 }
 
 QTabBar::tab {
-    color: @font-color;
-    background-color: @color1;
+    color: rgb(209, 209, 209);
+    background-color: rgb(36, 36, 36);
     padding: 5px 15px;
     font-size: 14px;
 }
@@ -37,14 +28,14 @@ QTabBar::tab:selected {
 }
 
 MyPlainTextEdit {
-    color: @font-color;
-    background-color: @color1;
+    color: rgb(209, 209, 209);
+    background-color: rgb(36, 36, 36);
     padding: 10px;
 }
 
 QMenuBar {
-    color: @font-color;
-    background-color: @color2;
+    color: rgb(209, 209, 209);
+    background-color: rgb(45, 45, 45);
     font-size: 14px;
 }
 
@@ -53,14 +44,18 @@ QMenuBar::item {
 }
 
 QMenuBar::item:selected {
-    background-color: @color3;
+    background-color: rgb(60, 60, 60);
 }
 
 QMenu {
-    color: @font-color;
-    background-color: @color2;
+    color: rgb(209, 209, 209);
+    background-color: rgb(45, 45, 45);
 }
 
-QMenu:selected {
-    background-color: @color3;
+QMenu::item {
+    padding: 7px 20px;
+}
+
+QMenu::item:selected {
+    background-color: rgb(60, 60, 60);
 }
