--- a/stylesheet.qss
+++ b/stylesheet.qss
@@ -34,6 +34,7 @@ QTabBar::tab:selected {
 MyPlainTextEdit {
     color: rgb(209, 209, 209);
     background-color: rgb(36, 36, 36);
+    padding: 5px;
 }
 
 QMenuBar {
