--- a/stylesheet.qss
+++ b/stylesheet.qss
@@ -35,6 +35,8 @@ MyPlainTextEdit {
     color: rgb(209, 209, 209);
     background-color: rgb(36, 36, 36);
     padding: 5px;
+    font-family: "font/Mononoki-Regular.ttf";
+    font-size: 14px;
 }
 
 QMenuBar {
