--- a/Form.ui
+++ b/Form.ui
@@ -131,7 +131,6 @@
     <property name="title">
      <string>Edit</string>
     </property>
-    <addaction name="separator"/>
     <addaction name="actionPreferences"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
@@ -169,6 +168,9 @@
    </property>
   </action>
   <action name="actionPreferences">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Preferences</string>
    </property>
